--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="red">#CA0000</color>
     <color name="egov">#186FC8</color>
     <color name="main_color">#215261</color>
+    <color name="main_color_">#497887</color>
+    <color name="main_color_open">#1A434E</color>
     <color name="yellow">#fff000</color>
     <color name="gray">#9C9C9C</color>
 
