--- a/app/src/main/res/drawable/child_selector2.xml
+++ b/app/src/main/res/drawable/child_selector2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/map" android:state_checked="false"/>
+    <item android:drawable="@drawable/maplast" android:state_checked="false"/>
     <item android:drawable="@drawable/mapset" android:state_checked="true"/>
 </selector>
