--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,6 +76,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            android:padding="5dp"
             android:id="@+id/guest"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
@@ -83,7 +84,8 @@
             android:text="@string/qonaq"
             android:textColor="@color/black"
             android:textSize="11sp"
-            tools:ignore="RtlHardcoded"
+            android:textAlignment="textEnd"
+            tools:ignore="RtlCompat,RtlHardcoded"
             android:layout_gravity="right"/>
 
         <Button
