--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -69,8 +69,6 @@
                 android:hint="Istifadəçi adı"
                 android:textColorHint="@color/black"
                 app:boxStrokeColor="@color/black"
-                app:counterEnabled="true"
-                app:counterMaxLength="15"
                 app:counterTextColor="@color/gray">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -152,6 +150,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:background="#00000000"
+                android:layout_marginBottom="20dp"
                 android:elevation="8dp"
                 android:text="Hesabin Varsa"
                 android:textColor="@color/black" />
