--- a/app/src/main/res/layout/categories_card_design.xml
+++ b/app/src/main/res/layout/categories_card_design.xml
@@ -33,7 +33,7 @@
             android:layout_height="30dp"
             android:layout_alignParentLeft="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/chair"
+            android:src="@drawable/ev3"
 
             />
 
