--- a/app/src/main/res/layout/featured_card_design.xml
+++ b/app/src/main/res/layout/featured_card_design.xml
@@ -47,14 +47,15 @@
             android:layout_width="wrap_content"
 
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp">
+            android:layout_marginStart="15dp">
 
             <ImageView
                 android:id="@+id/locationMv"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/locaticon" />
+                android:src="@drawable/locaticon"
+                android:contentDescription="TODO" />
 
             <TextView
                 android:id="@+id/feature_location"
@@ -75,7 +76,7 @@
             android:id="@+id/feature_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
             android:text="@string/descriptions"
             android:textColor="@color/main_color" />
