--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -3,21 +3,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:background="@color/main_color">
+        android:layout_height="250dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageProfil"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_centerInParent="true"
             android:onClick="selectImage"
-            android:src="@drawable/profiles" />
+            android:src="@drawable/prof" />
+
+<!--        <ImageView-->
+<!--            android:id="@+id/imageProfilMini"-->
+<!--            android:layout_width="30dp"-->
+<!--            android:layout_height="30dp"-->
+<!--            android:layout_alignParentTop="true"-->
+<!--            android:layout_alignParentEnd="true"-->
+<!--            android:layout_marginTop="160dp"-->
+<!--            android:layout_marginEnd="137dp"-->
+<!--            android:background="@drawable/camera_bg"-->
+<!--            />-->
+
+<!--        <ImageView-->
+<!--            android:layout_width="25dp"-->
+<!--            android:layout_height="25dp"-->
+<!--            android:layout_alignParentTop="true"-->
+<!--            android:layout_alignParentEnd="true"-->
+<!--            android:layout_marginTop="162dp"-->
+<!--            android:layout_marginEnd="139dp"-->
+<!--            android:src="@drawable/camera"-->
+<!--            app:tint="#B8B8B8" />-->
 
         <TextView
             android:layout_width="wrap_content"
@@ -25,30 +45,29 @@
             android:layout_below="@id/imageProfil"
             android:layout_centerInParent="true"
             android:text="Serif Sireliyev"
-            android:textColor="@color/white"
+            android:textColor="@color/main_color_open"
             android:textSize="30sp"
             android:textStyle="bold" />
 
     </RelativeLayout>
 
     <LinearLayout
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="50dp"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="5dp"
             android:layout_marginEnd="15dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/backgr"
-            android:elevation="8dp">
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp">
 
             <ImageView
+                app:tint="@color/main_color_open"
                 android:id="@+id/list_make_prof"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
@@ -58,7 +77,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/profile" />
+                android:src="@drawable/men" />
 
             <TextView
                 android:layout_width="300dp"
@@ -69,23 +88,29 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_toEndOf="@id/list_make_prof"
-                android:text="Sexsi Hesab Melumatlari"
-                android:textColor="@color/black"
-                android:textSize="22sp" />
+                android:text="Şəxsi hesab məlumatları"
+                android:textColor="@color/main_color_open"
+                android:textSize="18sp" />
 
         </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#E3E3E3"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="5dp"
             android:layout_marginEnd="15dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/backgr"
-            android:elevation="8dp">
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp">
 
             <ImageView
+                app:tint="@color/main_color_open"
                 android:id="@+id/list_make_world"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
@@ -95,35 +120,40 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/world" />
+                android:src="@drawable/contact" />
 
             <TextView
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_margin="5dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_toEndOf="@id/list_make_world"
-                android:text="Dunya ile elaqe"
-                android:textColor="@color/black"
-                android:textSize="22sp" />
+                android:text="Bizimlə əlaqə"
+                android:textSize="18sp"
+                android:textColor="@color/main_color_open"/>
 
         </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#E3E3E3"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="5dp"
             android:layout_marginEnd="15dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/backgr"
-            android:elevation="8dp">
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp">
 
             <ImageView
+                app:tint="@color/main_color_open"
                 android:id="@+id/list_make_settings"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
@@ -133,7 +163,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/settings" />
+                android:src="@drawable/welike" />
 
             <TextView
                 android:layout_width="200dp"
@@ -144,21 +174,26 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_toEndOf="@id/list_make_settings"
-                android:text="Ayarlar"
-                android:textColor="@color/black"
-                android:textSize="22sp" />
+                android:text="Bizi dəyərləndirin"
+                android:textColor="@color/main_color_open"
+                android:textSize="18sp" />
 
         </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:background="#E3E3E3" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="5dp"
             android:layout_marginEnd="15dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/backgr"
-            android:elevation="8dp">
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp">
 
             <ImageView
                 android:id="@+id/list_make_like"
@@ -170,36 +205,42 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/like" />
+                android:src="@drawable/settingss"
+                app:tint="@color/main_color_open"/>
 
             <TextView
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_margin="5dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_toEndOf="@id/list_make_like"
-                android:text="Bizi Like edin"
-                android:textColor="@color/black"
-                android:textSize="22sp" />
+                android:text="Sazlamalar"
+                android:textColor="@color/main_color_open"
+                android:textSize="18sp" />
 
         </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#E3E3E3"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"/>
 
         <RelativeLayout
             android:id="@+id/cixisRelat"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="5dp"
             android:layout_marginEnd="15dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/backgr"
-            android:elevation="8dp">
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp">
 
             <ImageView
+                app:tint="@color/main_color_open"
                 android:id="@+id/list_make_image"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
@@ -209,7 +250,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/question" />
+                android:src="@drawable/logout" />
 
             <TextView
                 android:layout_width="200dp"
@@ -220,10 +261,10 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_toEndOf="@id/list_make_image"
-                android:text="Cixis edin"
-                android:textColor="@color/black"
-                android:textSize="22sp"
-                android:onClick="SignOut"/>
+                android:onClick="SignOut"
+                android:text="Çıxış edin"
+                android:textColor="@color/main_color_open"
+                android:textSize="18sp" />
 
         </RelativeLayout>
 
