--- a/app/src/main/res/layout/fragment_saved.xml
+++ b/app/src/main/res/layout/fragment_saved.xml
@@ -1,83 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".fragments.SavedFragment"
-    android:background="@color/white">
+    tools:context=".fragments.SavedFragment">
 
     <ImageView
-        android:layout_margin="20dp"
         android:id="@+id/saved_fragment_photo"
-        android:layout_width="250dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_gravity="center"
-        android:layout_height="250dp"
-        android:src="@drawable/social"/>
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:src="@drawable/social" />
 
     <TextView
-        android:layout_margin="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
         android:text="@string/unvan_text"
         android:textColor="@color/main_color"
-        android:textSize="30sp"/>
+        android:textSize="25sp" />
 
     <TextView
-        android:textColor="@color/gray"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
         android:text="Listleriniz"
-        android:textSize="24sp"
-        android:layout_marginTop="40dp"
-        android:layout_marginStart="20dp"/>
+        android:textColor="@color/main_color_"
+        android:textSize="24sp" />
+
 
     <RelativeLayout
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/saved_backgr"
         android:elevation="8dp">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/card_view_saved"
+            android:id="@+id/card_view_savedaaa"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_centerVertical="true"
-            android:elevation="5dp"
+            android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
-            app:cardCornerRadius="6dp"
-            android:layout_marginStart="10dp">
+            android:elevation="5dp"
+            app:cardCornerRadius="6dp">
 
             <ImageView
-                android:id="@+id/saved_card_photo"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ev3" />
+                android:src="@drawable/ev2" />
 
         </androidx.cardview.widget.CardView>
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/saved"
-            android:layout_marginEnd="10dp"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/savelast" />
 
         <TextView
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
-            android:layout_toEndOf="@id/card_view_saved"
-            android:text="Ana səhifən bəyənə bilərsiniz"
+            android:layout_toEndOf="@id/card_view_savedaaa"
+            android:text="Nerimanov 350/aylıq"
             android:textColor="@color/main_color"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/saved_backgr"
+        android:elevation="8dp">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_view_saveda"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:elevation="5dp"
+            app:cardCornerRadius="6dp">
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ev1" />
+
+        </androidx.cardview.widget.CardView>
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/savelast" />
+
+        <TextView
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/card_view_saveda"
+            android:text="Genclik 560/aylıq"
+            android:textColor="@color/main_color"
+            android:textSize="18sp" />
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/saved_backgr"
+        android:elevation="8dp">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_view_savedaa"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:elevation="5dp"
+            app:cardCornerRadius="6dp">
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/bina_az_ehmedli" />
+
+        </androidx.cardview.widget.CardView>
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/savelast" />
+
+        <TextView
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/card_view_savedaa"
+            android:text="Əhmədli 400/aylıq"
+            android:textColor="@color/main_color"
+            android:textSize="18sp" />
 
 
     </RelativeLayout>
